--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "postcss-pseudo-class-any-link": "^8.0.2"
+    "postcss-pseudo-class-any-link": "^8.0.2",
+    "tailwindcss": "^3.3.1"
   }
 }
