--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-syntax-class-static-block": "^7.14.5",
     "@babel/plugin-transform-classes": "^7.21.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "gapi-script": "^1.2.0",
+    "history": "5.3.0",
     "postcss-preset-env": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -26,7 +30,9 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router": "6.4.1",
+    "react-router-dom": "6.4.1",
+    "react-router-prompt": "0.3.1-beta",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
