--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/plugin-proposal-class-static-block": "^7.21.0",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/plugin-syntax-class-static-block": "^7.14.5",
-    "@babel/plugin-transform-classes": "^7.21.0",
+    "@babel/plugin-transform-classes": "^7.22.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -15,8 +15,8 @@
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
@@ -30,14 +30,14 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router": "6.4.1",
-    "react-router-dom": "6.4.1",
-    "react-router-prompt": "0.3.1-beta",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
+    "react-router-prompt": "^0.5.4",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "use-history": "^1.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.3.2"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
